--- a/src/components/board/ChessBoard.css
+++ b/src/components/board/ChessBoard.css
@@ -21,4 +21,21 @@
     display: flex;
     align-items: center;
 }
+.counters{
+    height:400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left:20px;
+}
+.message{
+    height:60px;
+    width: 200px;
+    border:1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 
